<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello World!</string>
    <string name="app_name">StudyBuddies</string>
    <string name="splash_text">TEXT TO BE ADDED HERE!!!!!!!!!!!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string> 
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="to_register">New to Study Buddies?\nRegister here</string>
    <string name="to_login">Already have an account?\nLogin here</string>
    <string name="action_search">Search</string>
    <string name="action_new_event">Create Study Group</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_check_updates">Updates</string>
    <string name="action_map">Map</string>
    <string name="search_hint">Search for subject</string>
    <string name="passwordConfirm">Confirm Password</string>

</resources>
